mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_use_before_declare.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.02s
     Running `target/debug/mux run /home/derekcorn/code/mux-lang/test_scripts/error_cases/semantic_use_before_declare.mux`
error: Undefined variable 'y'
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/semantic_use_before_declare.mux:3:9
   |
 3 |   print(y)
   |         ^
